flux/yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluxdemo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    name: fluxdemo
    app: demo
